Create Navbar + NEW BG

--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="navtop">
+        <a href="">KEGIATAN SEKOLAH</a>
+        <a href="">SARANA PRASARANAN</a>
+        <a href="">KESISWAAN</a>
+        <a href="">GTK</a>
+        <a href="">KONSENTRASI KEAHLIAN</a>
+        <a href="">PROGRAM SEKOLAH</a>
+        <a href="">PROFIL</a>
+        <a href="">BERANDA</a>
+    </div>
+    <div class="container2">
+    <div class="content">
+
+    </div>
+    </div>
     
 </body>
 </html>
